Проверка Лемматизатора